--- a/core/res/res/values/superior_config.xml
+++ b/core/res/res/values/superior_config.xml
@@ -66,4 +66,7 @@
 
     <!-- Display color inversion availability -->
     <bool name="config_displayInversionAvailable">true</bool>
+
+     <!-- Whether the device supports Smart Pixels -->
+     <bool name="config_supportSmartPixels">false</bool>
 </resources>
