--- a/packages/SystemUI/res/values/superior_strings.xml
+++ b/packages/SystemUI/res/values/superior_strings.xml
@@ -116,4 +116,8 @@
     <string name="quick_settings_powershare_off_powersave_label">Battery Share off\nBattery saver</string>
     <string name="quick_settings_powershare_off_low_battery_label">Battery Share off\nBattery too low</string>
     <string name="quick_settings_powershare_enabled_label">Battery Share is enabled</string>
+
+    <!-- Smart Pixels QS Tile -->
+    <string name="quick_settings_smart_pixels">Smart Pixels</string>
+    <string name="quick_settings_smart_pixels_on_power_save">Auto-enabled Smart Pixels</string>
 </resources>
